# DORA

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  calibration_turn.npz  calibration_turn_1.npz  camera_calibration.py  lidar_calibration.py  requirements.txt  setup.bash  setup.sh  show.py  video.py
.github/workflows/: build.yml
Sweeper_simulation/: Assembly-CSharp.csproj  Sweeper_simulation.sln
Sweeper_simulation/.plastic/: plastic.changes  plastic.selector  plastic.wktree  plastic.workspace
Sweeper_simulation/Assets/: New Material 2.mat  New Material 3.mat  New Material 4.mat  New Material 5.mat  New Material Variant.mat  New Material.mat  spinner.cs  spinner_navigation.cs
Sweeper_simulation/ProjectSettings/: ProjectSettings.asset
Sweeper_simulation/Temp/: workerlic
arduino/: T_REX_I2C_tester.ino
data/camera_info/: logitechC270.yaml  logitechC270_1280x720.yaml  logitechC270_640x480.yaml
data/maps/: lds_scan_1.npy  lds_scan_10.npy  lds_scan_11.npy  lds_scan_12.npy  lds_scan_2.npy  lds_scan_3.npy  lds_scan_4.npy  lds_scan_5.npy  lds_scan_6.npy  lds_scan_7.npy  lds_scan_8.npy  lds_scan_9.npy  test.npz
install/: local_setup.sh  setup.sh
launch/: display.launch.py  dora.launch.py  dora.py  gps.launch.py  gps.py  gpu.launch.py  overhead_cam.py  robot.launch.py
log/: latest_build
src/: dora.py  interface.py  routing.py  simulator.py
src/dora_srvs/: CMakeLists.txt  package.xml
src/dora_srvs/srv/: JobCommand  LdsCmd.srv  LdsCommand.srv  SweeperCmd.srv  WheelsCmd.srv
web/: package.json  pnpm-lock.yaml  tailwind.config.ts
(+357 files in other folders)
