<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dora_srvs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ardithhowaiman@gmail.com">Ardith Ho</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>sensor_msgs</depend>
  <depend>dora_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
